<resources>
    <string name="app_name">Food Delivery</string>
    <string name="designers">Design By \nNeatRoots</string>
    <string name="name">Waves Of Food</string>
    <string name="slogan">Deliever Favorite Food</string>
    <string name="loginToLabel">Login To Your Account</string>
    <string name="singUpToLabel">Sign Up Here</string>
    <string name="loginToEmail">Email or Phone Number</string>
    <string name="loginToPassword">Password</string>
    <string name="singUpName">Name</string>
    <string name="permissionForLocationPage">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <string name="chooseLocation">Choose Your Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>