<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="32dp"
        android:paddingHorizontal="5dp"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:fontFamily="@font/yeonsung"
        android:text="@string/chooseLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        app:endIconDrawable="@drawable/arrow_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <AutoCompleteTextView
            android:id="@+id/location_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Choose Location"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/lato"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="380dp"
        android:layout_height="165dp"
        android:layout_marginBottom="40dp"
        android:text="@string/permissionForLocationPage"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/lato"
        android:layout_marginStart="8dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/designers"
        android:fontFamily="@font/yeonsung"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/startGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>