<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUpUserActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="44sp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textSize="16sp"
        android:fontFamily="@font/lato"
        android:textStyle="bold"
        android:textColor="@color/startGreen"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singUpToLabel"
        android:textSize="20sp"
        android:fontFamily="@font/yeonsung"
        android:textStyle="bold"
        android:textColor="@color/startGreen"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/sing_up_name"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:fontFamily="@font/lato"
        android:hint="@string/singUpName"
        android:textSize="15sp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="15dp"
        android:paddingHorizontal="15dp"
        android:elevation="11dp"
        android:outlineSpotShadowColor="@color/startGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/sing_up_login"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:fontFamily="@font/lato"
        android:hint="@string/loginToEmail"
        android:textSize="15sp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="15dp"
        android:paddingHorizontal="15dp"
        android:elevation="11dp"
        android:outlineSpotShadowColor="@color/startGreen"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sing_up_name" />

    <EditText
        android:id="@+id/sing_up_password"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:fontFamily="@font/lato"
        android:hint="@string/loginToPassword"
        android:textSize="15sp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="15dp"
        android:paddingHorizontal="15dp"
        android:elevation="11dp"
        android:outlineSpotShadowColor="@color/startGreen"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sing_up_login" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yeonsung"
        android:text="Or"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sing_up_password" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="Sign Up With"
        android:textSize="20sp"
        android:fontFamily="@font/yeonsung"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:text="Facebook"
        android:background="@drawable/btn_shape_social_network"
        android:outlineSpotShadowColor="@color/startGreen"
        android:drawableLeft="@drawable/facebook"
        android:paddingHorizontal="15dp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/lato"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="Google"
        android:background="@drawable/btn_shape_social_network"
        android:outlineSpotShadowColor="@color/startGreen"
        android:drawableLeft="@drawable/google"
        android:paddingHorizontal="15dp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/lato"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_btn"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:elevation="4dp"
        android:outlineSpotShadowColor="@color/startGreen"
        android:outlineAmbientShadowColor="@color/startGreen"
        android:shadowColor="@color/startGreen"
        android:text="Create Account"
        android:background="@drawable/green_btn_90"
        android:fontFamily="@font/yeonsung"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/go_user_login_up_btn"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Already Have An Account?"
        android:fontFamily="@font/lato"
        android:textColor="@color/startGreen"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>